// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendVote should send a unvote & vote transaction 1`] = `
<div>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fznJRM jfPUjT"
    >
      <div
        class="px-4 sm:px-6 lg:px-10"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="sc-fznWqX jXdzJo"
            >
              <svg
                width="48"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex h-20 mr-auto md:h-24"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="overflow-hidden rounded-lg"
              >
                <button
                  class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-700 hover:bg-theme-primary-50"
                  color="primary"
                  data-testid="navbar__buttons--notifications"
                  type="button"
                >
                  <div
                    class="sc-AxiKw fFXzuz p-1"
                    height="22"
                    width="22"
                  >
                    <svg>
                      notification.svg
                    </svg>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--send"
                type="button"
              >
                <div
                  class="sc-AxiKw fFXzuz p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="sc-AxiKw fFXzuz p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    receive.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 mr-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-medium text-theme-neutral"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-neutral-dark"
              >
                <span
                  data-testid="Amount"
                >
                  91.43089801 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="ml-4 cursor-pointer"
                data-testid="navbar__useractions"
              >
                <div
                  class="sc-AxgMl eqWWwc -mr-2 border-theme-primary-contrast"
                >
                  <span
                    class="text-theme-neutral-dark"
                  >
                    <div
                      class="sc-AxiKw dzBdqj"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        btc.svg
                      </svg>
                    </div>
                  </span>
                </div>
                <div
                  class="relative inline-flex items-center justify-center align-middle rounded-full"
                  data-testid="navbar__user--avatar"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background"
                    >
                      JO
                    </span>
                  </div>
                  <span
                    class="sc-AxhUy kTPsmA flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                  >
                    <div
                      class="sc-AxiKw ksjdLL"
                      height="10"
                      width="10"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                    <span />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex items-center space-x-3 text-sm container py-5 mx-auto font-semibold px-14 text-theme-neutral-dark"
      data-testid="breadcrumbs__wrapper"
    >
      <div
        class="sc-AxiKw eKFBFH"
        height="24"
        width="13"
      >
        <svg>
          arrow-left.svg
        </svg>
      </div>
      <div
        class="space-x-3"
      >
        <a
          class="text-theme-neutral-dark"
          href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 "
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 bryymu flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <form
            class="max-w-xl mx-auto"
            data-testid="Form"
          >
            <div>
              <ul
                class="sc-fzqARJ kCbUYb"
              >
                <li
                  class="sc-fzoiQi gZjCeK"
                />
                <li
                  class="sc-fzoiQi gZjCeK"
                />
                <li
                  class="sc-fzoiQi gZjCeK"
                />
                <li
                  class="sc-fzoiQi gZjCeK"
                />
              </ul>
              <div
                class="mt-8"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <section
                    class="space-y-8"
                    data-testid="TransactionSuccessful"
                  >
                    <div
                      class="flex items-end justify-between bg-theme-background"
                    >
                      <div>
                        <h1
                          class="mb-0 md:text-4xl"
                          data-testid="header__title"
                        >
                          Transaction Sent
                        </h1>
                      </div>
                    </div>
                    <svg
                      class="w-full"
                    >
                      transaction_successful.svg
                    </svg>
                    <p
                      class="text-theme-neutral-dark"
                    >
                      Your transaction was successfully sent. Please monitor the blockchain to ensure your transaction is confirmed and processed. The following is relevant information for your transaction:
                    </p>
                    <div>
                      <div
                        class="sc-fznKkj cYdjTE"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="text-sm font-semibold text-theme-neutral"
                          >
                            ID
                          </div>
                          <div
                            class="font-semibold"
                          >
                            <div
                              class="flex items-center"
                            >
                              <a
                                class="sc-fzplWN bETMmw inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary hover:text-theme-primary-dark hover:underline active:text-theme-primary-500"
                                data-testid="Link"
                                rel="noopener noreferrer"
                                to="https://dexplorer.ark.io/transaction/d819c5199e323a62a4349948ff075edde91e509028329f66ec76b8518ad1e493"
                              >
                                <span
                                  class="sc-fzpans kkFAbe text-theme-primary-dark"
                                  data-testid="TruncateMiddle"
                                >
                                  d819c5199e323…6b8518ad1e493
                                </span>
                              </a>
                              <span
                                class="flex ml-5 text-theme-primary-300"
                              >
                                <div
                                  class="inline-block cursor-pointer"
                                  data-testid="clipboard__wrapper"
                                >
                                  <div
                                    class="sc-AxiKw dzBdqj"
                                    height="1em"
                                    width="1em"
                                  >
                                    <svg>
                                      copy.svg
                                    </svg>
                                  </div>
                                </div>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="sc-fznKkj bBFPlp"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="text-sm font-semibold text-theme-neutral"
                          >
                            Cryptoasset
                          </div>
                          <div
                            class="font-semibold"
                          >
                            ARK Devnet
                          </div>
                        </div>
                        <div
                          aria-label="ARK Devnet"
                          class="sc-AxgMl eqWWwc border-theme-primary-100 text-theme-primary-400"
                          data-testid="NetworkIcon-ARK-ark.devnet"
                        >
                          <div
                            class="sc-AxiKw dklFyP"
                            data-testid="NetworkIcon__icon"
                            height="20"
                            width="20"
                          >
                            <svg>
                              ark.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                      <div
                        class="sc-fznKkj bBFPlp"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="text-sm font-semibold text-theme-neutral"
                          >
                            <span
                              class="mr-1"
                            >
                              Sender
                            </span>
                            <div
                              class="sc-fzoLsD jBzTcb"
                              color="warning"
                            >
                              <span
                                class="text-sm"
                              >
                                Your address
                              </span>
                            </div>
                          </div>
                          <div
                            class="font-semibold"
                          >
                            <div
                              class="inline-block truncate align-middle"
                            >
                              <span
                                class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-2 font-semibold text-base"
                                data-testid="address__wallet-name"
                              >
                                ARK Wallet 1
                              </span>
                              <span
                                class="sc-fzpans kkFAbe text-theme-neutral-light font-semibold text-base"
                                data-testid="address__wallet-address"
                              >
                                D8rr7B…s6YUYD
                              </span>
                            </div>
                          </div>
                        </div>
                        <div
                          class="flex items-center -space-x-2"
                        >
                          <div
                            class="sc-AxgMl eqWWwc border-theme-text"
                          >
                            <div
                              class="sc-AxiKw iQZLaj"
                              height="25"
                              width="25"
                            >
                              <svg>
                                delegate.svg
                              </svg>
                            </div>
                          </div>
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                                title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="sc-fznKkj bBFPlp"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="text-sm font-semibold text-theme-neutral"
                          >
                            Transaction Type
                          </div>
                          <div
                            class="font-semibold"
                          >
                            Vote / Unvote
                          </div>
                        </div>
                        <div
                          class="sc-AxgMl eqWWwc border-theme-text"
                        >
                          <div
                            class="sc-AxiKw jcWfEX"
                            height="21"
                            width="21"
                          >
                            <svg>
                              vote-unvote.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                      <div
                        class="sc-fznKkj bBFPlp"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="text-sm font-semibold text-theme-neutral"
                          >
                            Votes (1)
                          </div>
                          <div
                            class="font-semibold"
                          >
                            <div
                              class="-my-2"
                            >
                              <div
                                class="border-b border-dashed last:border-b-0 border-theme-neutral-300"
                              >
                                <div
                                  class="py-4 space-x-4"
                                >
                                  <div
                                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jNpDPZ"
                                    data-testid="Avatar"
                                  >
                                    <div
                                      class="w-full h-full"
                                    >
                                      <img
                                        alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                                        title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                                      />
                                    </div>
                                  </div>
                                  <div
                                    class="inline-block truncate align-middle"
                                  >
                                    <span
                                      class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-2 font-semibold text-base"
                                      data-testid="address__wallet-name"
                                    >
                                      arkx
                                    </span>
                                    <span
                                      class="sc-fzpans kkFAbe text-theme-neutral-light font-semibold text-base"
                                      data-testid="address__wallet-address"
                                    >
                                      D61mfS…J3Dyib
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="sc-fznKkj bBFPlp"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="text-sm font-semibold text-theme-neutral"
                          >
                            Unvotes (1)
                          </div>
                          <div
                            class="font-semibold"
                          >
                            <div
                              class="-my-2"
                            >
                              <div
                                class="border-b border-dashed last:border-b-0 border-theme-neutral-300"
                              >
                                <div
                                  class="py-4 space-x-4"
                                >
                                  <div
                                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jNpDPZ"
                                    data-testid="Avatar"
                                  >
                                    <div
                                      class="w-full h-full"
                                    >
                                      <img
                                        alt="D5L5zXgvqtg7qoGimt5vYhFuf5Ued6iWVr"
                                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 188, 212)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/></svg>"
                                        title="D5L5zXgvqtg7qoGimt5vYhFuf5Ued6iWVr"
                                      />
                                    </div>
                                  </div>
                                  <div
                                    class="inline-block truncate align-middle"
                                  >
                                    <span
                                      class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-2 font-semibold text-base"
                                      data-testid="address__wallet-name"
                                    >
                                      genesis_42
                                    </span>
                                    <span
                                      class="sc-fzpans kkFAbe text-theme-neutral-light font-semibold text-base"
                                      data-testid="address__wallet-address"
                                    >
                                      D5L5zX…d6iWVr
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="sc-fznKkj DgeKj"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="text-sm font-semibold text-theme-neutral"
                          >
                            Transaction Fee
                          </div>
                          <div
                            class="font-semibold"
                          >
                            <span
                              data-testid="Amount"
                            >
                              0.20716584 DARK
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </section>
                </div>
                <div
                  class="flex justify-end mt-10 space-x-3"
                >
                  <button
                    class="sc-AxjAm fPpool"
                    color="primary"
                    data-testid="SendVote__button--back-to-wallet"
                    type="button"
                  >
                    Back to Wallet
                  </button>
                  <button
                    class="sc-AxjAm fPpool space-x-2"
                    color="primary"
                    data-testid="SendVote__button--download"
                    type="button"
                  >
                    <div
                      class="sc-AxiKw dzBdqj"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        download.svg
                      </svg>
                    </div>
                    <span>
                      Download
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SendVote should send a unvote transaction 1`] = `
<div>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fznJRM jfPUjT"
    >
      <div
        class="px-4 sm:px-6 lg:px-10"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="sc-fznWqX jXdzJo"
            >
              <svg
                width="48"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex h-20 mr-auto md:h-24"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="overflow-hidden rounded-lg"
              >
                <button
                  class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-700 hover:bg-theme-primary-50"
                  color="primary"
                  data-testid="navbar__buttons--notifications"
                  type="button"
                >
                  <div
                    class="sc-AxiKw fFXzuz p-1"
                    height="22"
                    width="22"
                  >
                    <svg>
                      notification.svg
                    </svg>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--send"
                type="button"
              >
                <div
                  class="sc-AxiKw fFXzuz p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="sc-AxiKw fFXzuz p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    receive.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 mr-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-medium text-theme-neutral"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-neutral-dark"
              >
                <span
                  data-testid="Amount"
                >
                  91.43089801 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="ml-4 cursor-pointer"
                data-testid="navbar__useractions"
              >
                <div
                  class="sc-AxgMl eqWWwc -mr-2 border-theme-primary-contrast"
                >
                  <span
                    class="text-theme-neutral-dark"
                  >
                    <div
                      class="sc-AxiKw dzBdqj"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        btc.svg
                      </svg>
                    </div>
                  </span>
                </div>
                <div
                  class="relative inline-flex items-center justify-center align-middle rounded-full"
                  data-testid="navbar__user--avatar"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background"
                    >
                      JO
                    </span>
                  </div>
                  <span
                    class="sc-AxhUy kTPsmA flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                  >
                    <div
                      class="sc-AxiKw ksjdLL"
                      height="10"
                      width="10"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                    <span />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex items-center space-x-3 text-sm container py-5 mx-auto font-semibold px-14 text-theme-neutral-dark"
      data-testid="breadcrumbs__wrapper"
    >
      <div
        class="sc-AxiKw eKFBFH"
        height="24"
        width="13"
      >
        <svg>
          arrow-left.svg
        </svg>
      </div>
      <div
        class="space-x-3"
      >
        <a
          class="text-theme-neutral-dark"
          href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 "
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 bryymu flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <form
            class="max-w-xl mx-auto"
            data-testid="Form"
          >
            <div>
              <ul
                class="sc-fzqARJ kCbUYb"
              >
                <li
                  class="sc-fzoiQi gZjCeK"
                />
                <li
                  class="sc-fzoiQi gZjCeK"
                />
                <li
                  class="sc-fzoiQi gZjCeK"
                />
                <li
                  class="sc-fzoiQi gZjCeK"
                />
              </ul>
              <div
                class="mt-8"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <section
                    class="space-y-8"
                    data-testid="TransactionSuccessful"
                  >
                    <div
                      class="flex items-end justify-between bg-theme-background"
                    >
                      <div>
                        <h1
                          class="mb-0 md:text-4xl"
                          data-testid="header__title"
                        >
                          Transaction Sent
                        </h1>
                      </div>
                    </div>
                    <svg
                      class="w-full"
                    >
                      transaction_successful.svg
                    </svg>
                    <p
                      class="text-theme-neutral-dark"
                    >
                      Your transaction was successfully sent. Please monitor the blockchain to ensure your transaction is confirmed and processed. The following is relevant information for your transaction:
                    </p>
                    <div>
                      <div
                        class="sc-fznKkj cYdjTE"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="text-sm font-semibold text-theme-neutral"
                          >
                            ID
                          </div>
                          <div
                            class="font-semibold"
                          >
                            <div
                              class="flex items-center"
                            >
                              <a
                                class="sc-fzplWN bETMmw inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary hover:text-theme-primary-dark hover:underline active:text-theme-primary-500"
                                data-testid="Link"
                                rel="noopener noreferrer"
                                to="https://dexplorer.ark.io/transaction/32e5278cb72f24f2c04c4797dbfbffa7072f6a30e016093fdd3f7660a2ee2faf"
                              >
                                <span
                                  class="sc-fzpans kkFAbe text-theme-primary-dark"
                                  data-testid="TruncateMiddle"
                                >
                                  32e5278cb72f2…f7660a2ee2faf
                                </span>
                              </a>
                              <span
                                class="flex ml-5 text-theme-primary-300"
                              >
                                <div
                                  class="inline-block cursor-pointer"
                                  data-testid="clipboard__wrapper"
                                >
                                  <div
                                    class="sc-AxiKw dzBdqj"
                                    height="1em"
                                    width="1em"
                                  >
                                    <svg>
                                      copy.svg
                                    </svg>
                                  </div>
                                </div>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="sc-fznKkj bBFPlp"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="text-sm font-semibold text-theme-neutral"
                          >
                            Cryptoasset
                          </div>
                          <div
                            class="font-semibold"
                          >
                            ARK Devnet
                          </div>
                        </div>
                        <div
                          aria-label="ARK Devnet"
                          class="sc-AxgMl eqWWwc border-theme-primary-100 text-theme-primary-400"
                          data-testid="NetworkIcon-ARK-ark.devnet"
                        >
                          <div
                            class="sc-AxiKw dklFyP"
                            data-testid="NetworkIcon__icon"
                            height="20"
                            width="20"
                          >
                            <svg>
                              ark.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                      <div
                        class="sc-fznKkj bBFPlp"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="text-sm font-semibold text-theme-neutral"
                          >
                            <span
                              class="mr-1"
                            >
                              Sender
                            </span>
                            <div
                              class="sc-fzoLsD jBzTcb"
                              color="warning"
                            >
                              <span
                                class="text-sm"
                              >
                                Your address
                              </span>
                            </div>
                          </div>
                          <div
                            class="font-semibold"
                          >
                            <div
                              class="inline-block truncate align-middle"
                            >
                              <span
                                class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-2 font-semibold text-base"
                                data-testid="address__wallet-name"
                              >
                                ARK Wallet 1
                              </span>
                              <span
                                class="sc-fzpans kkFAbe text-theme-neutral-light font-semibold text-base"
                                data-testid="address__wallet-address"
                              >
                                D8rr7B…s6YUYD
                              </span>
                            </div>
                          </div>
                        </div>
                        <div
                          class="flex items-center -space-x-2"
                        >
                          <div
                            class="sc-AxgMl eqWWwc border-theme-text"
                          >
                            <div
                              class="sc-AxiKw iQZLaj"
                              height="25"
                              width="25"
                            >
                              <svg>
                                delegate.svg
                              </svg>
                            </div>
                          </div>
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                                title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="sc-fznKkj bBFPlp"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="text-sm font-semibold text-theme-neutral"
                          >
                            Transaction Type
                          </div>
                          <div
                            class="font-semibold"
                          >
                            Unvote
                          </div>
                        </div>
                        <div
                          class="sc-AxgMl eqWWwc border-theme-text"
                        >
                          <div
                            class="sc-AxiKw jcWfEX"
                            height="21"
                            width="21"
                          >
                            <svg>
                              unvote.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                      <div
                        class="sc-fznKkj bBFPlp"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="text-sm font-semibold text-theme-neutral"
                          >
                            Unvotes (1)
                          </div>
                          <div
                            class="font-semibold"
                          >
                            <div
                              class="-my-2"
                            >
                              <div
                                class="border-b border-dashed last:border-b-0 border-theme-neutral-300"
                              >
                                <div
                                  class="py-4 space-x-4"
                                >
                                  <div
                                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jNpDPZ"
                                    data-testid="Avatar"
                                  >
                                    <div
                                      class="w-full h-full"
                                    >
                                      <img
                                        alt="D5L5zXgvqtg7qoGimt5vYhFuf5Ued6iWVr"
                                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 188, 212)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/></svg>"
                                        title="D5L5zXgvqtg7qoGimt5vYhFuf5Ued6iWVr"
                                      />
                                    </div>
                                  </div>
                                  <div
                                    class="inline-block truncate align-middle"
                                  >
                                    <span
                                      class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-2 font-semibold text-base"
                                      data-testid="address__wallet-name"
                                    >
                                      genesis_42
                                    </span>
                                    <span
                                      class="sc-fzpans kkFAbe text-theme-neutral-light font-semibold text-base"
                                      data-testid="address__wallet-address"
                                    >
                                      D5L5zX…d6iWVr
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="sc-fznKkj DgeKj"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="text-sm font-semibold text-theme-neutral"
                          >
                            Transaction Fee
                          </div>
                          <div
                            class="font-semibold"
                          >
                            <span
                              data-testid="Amount"
                            >
                              0.20716584 DARK
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </section>
                </div>
                <div
                  class="flex justify-end mt-10 space-x-3"
                >
                  <button
                    class="sc-AxjAm fPpool"
                    color="primary"
                    data-testid="SendVote__button--back-to-wallet"
                    type="button"
                  >
                    Back to Wallet
                  </button>
                  <button
                    class="sc-AxjAm fPpool space-x-2"
                    color="primary"
                    data-testid="SendVote__button--download"
                    type="button"
                  >
                    <div
                      class="sc-AxiKw dzBdqj"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        download.svg
                      </svg>
                    </div>
                    <span>
                      Download
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SendVote should send a vote transaction 1`] = `
<div>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fznJRM jfPUjT"
    >
      <div
        class="px-4 sm:px-6 lg:px-10"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="sc-fznWqX jXdzJo"
            >
              <svg
                width="48"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex h-20 mr-auto md:h-24"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="overflow-hidden rounded-lg"
              >
                <button
                  class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-700 hover:bg-theme-primary-50"
                  color="primary"
                  data-testid="navbar__buttons--notifications"
                  type="button"
                >
                  <div
                    class="sc-AxiKw fFXzuz p-1"
                    height="22"
                    width="22"
                  >
                    <svg>
                      notification.svg
                    </svg>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--send"
                type="button"
              >
                <div
                  class="sc-AxiKw fFXzuz p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="sc-AxiKw fFXzuz p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    receive.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 mr-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-medium text-theme-neutral"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-neutral-dark"
              >
                <span
                  data-testid="Amount"
                >
                  91.43089801 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="ml-4 cursor-pointer"
                data-testid="navbar__useractions"
              >
                <div
                  class="sc-AxgMl eqWWwc -mr-2 border-theme-primary-contrast"
                >
                  <span
                    class="text-theme-neutral-dark"
                  >
                    <div
                      class="sc-AxiKw dzBdqj"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        btc.svg
                      </svg>
                    </div>
                  </span>
                </div>
                <div
                  class="relative inline-flex items-center justify-center align-middle rounded-full"
                  data-testid="navbar__user--avatar"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background"
                    >
                      JO
                    </span>
                  </div>
                  <span
                    class="sc-AxhUy kTPsmA flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                  >
                    <div
                      class="sc-AxiKw ksjdLL"
                      height="10"
                      width="10"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                    <span />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex items-center space-x-3 text-sm container py-5 mx-auto font-semibold px-14 text-theme-neutral-dark"
      data-testid="breadcrumbs__wrapper"
    >
      <div
        class="sc-AxiKw eKFBFH"
        height="24"
        width="13"
      >
        <svg>
          arrow-left.svg
        </svg>
      </div>
      <div
        class="space-x-3"
      >
        <a
          class="text-theme-neutral-dark"
          href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 "
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 bryymu flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <form
            class="max-w-xl mx-auto"
            data-testid="Form"
          >
            <div>
              <ul
                class="sc-fzqARJ kCbUYb"
              >
                <li
                  class="sc-fzoiQi gZjCeK"
                />
                <li
                  class="sc-fzoiQi gZjCeK"
                />
                <li
                  class="sc-fzoiQi gZjCeK"
                />
                <li
                  class="sc-fzoiQi gZjCeK"
                />
              </ul>
              <div
                class="mt-8"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <section
                    class="space-y-8"
                    data-testid="TransactionSuccessful"
                  >
                    <div
                      class="flex items-end justify-between bg-theme-background"
                    >
                      <div>
                        <h1
                          class="mb-0 md:text-4xl"
                          data-testid="header__title"
                        >
                          Transaction Sent
                        </h1>
                      </div>
                    </div>
                    <svg
                      class="w-full"
                    >
                      transaction_successful.svg
                    </svg>
                    <p
                      class="text-theme-neutral-dark"
                    >
                      Your transaction was successfully sent. Please monitor the blockchain to ensure your transaction is confirmed and processed. The following is relevant information for your transaction:
                    </p>
                    <div>
                      <div
                        class="sc-fznKkj cYdjTE"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="text-sm font-semibold text-theme-neutral"
                          >
                            ID
                          </div>
                          <div
                            class="font-semibold"
                          >
                            <div
                              class="flex items-center"
                            >
                              <a
                                class="sc-fzplWN bETMmw inline-flex items-center font-semibold transition-colors duration-200 cursor-pointer text-theme-primary hover:text-theme-primary-dark hover:underline active:text-theme-primary-500"
                                data-testid="Link"
                                rel="noopener noreferrer"
                                to="https://dexplorer.ark.io/transaction/d819c5199e323a62a4349948ff075edde91e509028329f66ec76b8518ad1e493"
                              >
                                <span
                                  class="sc-fzpans kkFAbe text-theme-primary-dark"
                                  data-testid="TruncateMiddle"
                                >
                                  d819c5199e323…6b8518ad1e493
                                </span>
                              </a>
                              <span
                                class="flex ml-5 text-theme-primary-300"
                              >
                                <div
                                  class="inline-block cursor-pointer"
                                  data-testid="clipboard__wrapper"
                                >
                                  <div
                                    class="sc-AxiKw dzBdqj"
                                    height="1em"
                                    width="1em"
                                  >
                                    <svg>
                                      copy.svg
                                    </svg>
                                  </div>
                                </div>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="sc-fznKkj bBFPlp"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="text-sm font-semibold text-theme-neutral"
                          >
                            Cryptoasset
                          </div>
                          <div
                            class="font-semibold"
                          >
                            ARK Devnet
                          </div>
                        </div>
                        <div
                          aria-label="ARK Devnet"
                          class="sc-AxgMl eqWWwc border-theme-primary-100 text-theme-primary-400"
                          data-testid="NetworkIcon-ARK-ark.devnet"
                        >
                          <div
                            class="sc-AxiKw dklFyP"
                            data-testid="NetworkIcon__icon"
                            height="20"
                            width="20"
                          >
                            <svg>
                              ark.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                      <div
                        class="sc-fznKkj bBFPlp"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="text-sm font-semibold text-theme-neutral"
                          >
                            <span
                              class="mr-1"
                            >
                              Sender
                            </span>
                            <div
                              class="sc-fzoLsD jBzTcb"
                              color="warning"
                            >
                              <span
                                class="text-sm"
                              >
                                Your address
                              </span>
                            </div>
                          </div>
                          <div
                            class="font-semibold"
                          >
                            <div
                              class="inline-block truncate align-middle"
                            >
                              <span
                                class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-2 font-semibold text-base"
                                data-testid="address__wallet-name"
                              >
                                ARK Wallet 1
                              </span>
                              <span
                                class="sc-fzpans kkFAbe text-theme-neutral-light font-semibold text-base"
                                data-testid="address__wallet-address"
                              >
                                D8rr7B…s6YUYD
                              </span>
                            </div>
                          </div>
                        </div>
                        <div
                          class="flex items-center -space-x-2"
                        >
                          <div
                            class="sc-AxgMl eqWWwc border-theme-text"
                          >
                            <div
                              class="sc-AxiKw iQZLaj"
                              height="25"
                              width="25"
                            >
                              <svg>
                                delegate.svg
                              </svg>
                            </div>
                          </div>
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                                title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="sc-fznKkj bBFPlp"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="text-sm font-semibold text-theme-neutral"
                          >
                            Transaction Type
                          </div>
                          <div
                            class="font-semibold"
                          >
                            Vote
                          </div>
                        </div>
                        <div
                          class="sc-AxgMl eqWWwc border-theme-text"
                        >
                          <div
                            class="sc-AxiKw jcWfEX"
                            height="21"
                            width="21"
                          >
                            <svg>
                              vote.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                      <div
                        class="sc-fznKkj bBFPlp"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="text-sm font-semibold text-theme-neutral"
                          >
                            Votes (1)
                          </div>
                          <div
                            class="font-semibold"
                          >
                            <div
                              class="-my-2"
                            >
                              <div
                                class="border-b border-dashed last:border-b-0 border-theme-neutral-300"
                              >
                                <div
                                  class="py-4 space-x-4"
                                >
                                  <div
                                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jNpDPZ"
                                    data-testid="Avatar"
                                  >
                                    <div
                                      class="w-full h-full"
                                    >
                                      <img
                                        alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                                        title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                                      />
                                    </div>
                                  </div>
                                  <div
                                    class="inline-block truncate align-middle"
                                  >
                                    <span
                                      class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-2 font-semibold text-base"
                                      data-testid="address__wallet-name"
                                    >
                                      arkx
                                    </span>
                                    <span
                                      class="sc-fzpans kkFAbe text-theme-neutral-light font-semibold text-base"
                                      data-testid="address__wallet-address"
                                    >
                                      D61mfS…J3Dyib
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="sc-fznKkj DgeKj"
                        data-testid="TransactionDetail"
                      >
                        <div
                          class="flex-1 space-y-2"
                        >
                          <div
                            class="text-sm font-semibold text-theme-neutral"
                          >
                            Transaction Fee
                          </div>
                          <div
                            class="font-semibold"
                          >
                            <span
                              data-testid="Amount"
                            >
                              0.20716584 DARK
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </section>
                </div>
                <div
                  class="flex justify-end mt-10 space-x-3"
                >
                  <button
                    class="sc-AxjAm fPpool"
                    color="primary"
                    data-testid="SendVote__button--back-to-wallet"
                    type="button"
                  >
                    Back to Wallet
                  </button>
                  <button
                    class="sc-AxjAm fPpool space-x-2"
                    color="primary"
                    data-testid="SendVote__button--download"
                    type="button"
                  >
                    <div
                      class="sc-AxiKw dzBdqj"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        download.svg
                      </svg>
                    </div>
                    <span>
                      Download
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SendVote should show error if wrong mnemonic 1`] = `
<div>
  <div
    class="relative flex flex-col min-h-screen bg-theme-neutral-contrast"
  >
    <nav
      aria-labelledby="main menu"
      class="sc-fznJRM jfPUjT"
    >
      <div
        class="px-4 sm:px-6 lg:px-10"
      >
        <div
          class="relative flex justify-between h-20 md:h-24"
        >
          <div
            class="flex items-center my-auto"
          >
            <div
              class="sc-fznWqX jXdzJo"
            >
              <svg
                width="48"
              >
                ark-logo.svg
              </svg>
            </div>
          </div>
          <ul
            class="flex h-20 mr-auto md:h-24"
          >
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/plugins"
                title="Plugins"
              >
                Plugins
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="flex items-center mx-4 font-semibold transition-colors duration-200 text-md text-theme-neutral-dark hover:text-theme-neutral-900"
                href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="flex items-center my-auto space-x-4"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="overflow-hidden rounded-lg"
              >
                <button
                  class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-700 hover:bg-theme-primary-50"
                  color="primary"
                  data-testid="navbar__buttons--notifications"
                  type="button"
                >
                  <div
                    class="sc-AxiKw fFXzuz p-1"
                    height="22"
                    width="22"
                  >
                    <svg>
                      notification.svg
                    </svg>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--send"
                type="button"
              >
                <div
                  class="sc-AxiKw fFXzuz p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
            <div
              class="flex items-center overflow-hidden rounded-lg"
            >
              <button
                class="sc-AxjAm goVygI text-theme-primary-300 hover:text-theme-primary-dark hover:bg-theme-primary-50"
                color="primary"
                data-testid="navbar__buttons--receive"
                type="button"
              >
                <div
                  class="sc-AxiKw fFXzuz p-1"
                  height="22"
                  width="22"
                >
                  <svg>
                    receive.svg
                  </svg>
                </div>
              </button>
            </div>
            <div
              class="h-8 border-r border-theme-neutral-200"
            />
          </div>
          <div
            class="flex items-center my-auto ml-8 mr-4"
          >
            <div
              class="text-right"
            >
              <div
                class="text-xs font-medium text-theme-neutral"
              >
                Your balance
              </div>
              <div
                class="text-sm font-bold text-theme-neutral-dark"
              >
                <span
                  data-testid="Amount"
                >
                  91.43089801 BTC
                </span>
              </div>
            </div>
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <div
                class="ml-4 cursor-pointer"
                data-testid="navbar__useractions"
              >
                <div
                  class="sc-AxgMl eqWWwc -mr-2 border-theme-primary-contrast"
                >
                  <span
                    class="text-theme-neutral-dark"
                  >
                    <div
                      class="sc-AxiKw dzBdqj"
                      height="1em"
                      width="1em"
                    >
                      <svg>
                        btc.svg
                      </svg>
                    </div>
                  </span>
                </div>
                <div
                  class="relative inline-flex items-center justify-center align-middle rounded-full"
                  data-testid="navbar__user--avatar"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background"
                    >
                      JO
                    </span>
                  </div>
                  <span
                    class="sc-AxhUy kTPsmA flex border-2 rounded-full justify-center w-5 h-5 items-center align-middle bg-theme-background border-transparent bg-theme-primary-contrast border-theme-primary-contrast text-theme-primary-500"
                  >
                    <div
                      class="sc-AxiKw ksjdLL"
                      height="10"
                      width="10"
                    >
                      <svg>
                        chevron-down.svg
                      </svg>
                    </div>
                    <span />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex items-center space-x-3 text-sm container py-5 mx-auto font-semibold px-14 text-theme-neutral-dark"
      data-testid="breadcrumbs__wrapper"
    >
      <div
        class="sc-AxiKw eKFBFH"
        height="24"
        width="13"
      >
        <svg>
          arrow-left.svg
        </svg>
      </div>
      <div
        class="space-x-3"
      >
        <a
          class="text-theme-neutral-dark"
          href="/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 "
    >
      <div
        class="Section__SectionWrapper-sc-8cjvre-0 bryymu flex-1"
      >
        <div
          class="container py-16 mx-auto px-14"
        >
          <form
            class="max-w-xl mx-auto"
            data-testid="Form"
          >
            <div>
              <ul
                class="sc-fzqARJ kCbUYb"
              >
                <li
                  class="sc-fzoiQi gZjCeK"
                />
                <li
                  class="sc-fzoiQi gZjCeK"
                />
                <li
                  class="sc-fzoiQi gZjCeK"
                />
                <li
                  class="sc-fzoiQi kdGDDv"
                />
              </ul>
              <div
                class="mt-8"
              >
                <div
                  data-testid="tab-pabel__active-panel"
                >
                  <div
                    class="space-y-8"
                    data-testid="AuthenticationStep"
                  >
                    <div
                      class="flex items-end justify-between bg-theme-background"
                    >
                      <div>
                        <h1
                          class="mb-0 md:text-4xl"
                          data-testid="header__title"
                        >
                          Authenticate
                        </h1>
                        <div
                          class="text-theme-neutral-dark"
                          data-testid="header__subtitle"
                        >
                          Enter your twelve word mnemonic to authenticate the transaction.
                        </div>
                      </div>
                    </div>
                    <fieldset
                      class="sc-AxirZ kMHTdH flex flex-col space-y-2"
                    >
                      <label
                        class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-neutral-dark"
                        data-testid="FormLabel"
                        for="mnemonic"
                      >
                        Mnemonic
                        <div
                          class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
                          data-testid="FormLabel__required"
                        />
                      </label>
                      <div
                        class="sc-fzoLag hoOQgq max-w-20"
                        data-testid="InputPassword"
                      >
                        <input
                          aria-invalid="true"
                          class="sc-fzokOt iLiRks overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 text-theme-neutral-900 transition-colors duration-200 px-4 py-3 pr-12"
                          data-testid="AuthenticationStep__mnemonic"
                          name="mnemonic"
                          type="password"
                        />
                        <div
                          class="sc-fzqBZW sc-fzoyAV icrEyZ my-px mr-4"
                        >
                          <button
                            class="flex items-center justify-center w-full h-full text-2xl focus:outline-none text-theme-primary-400"
                            data-testid="InputPassword__toggle"
                            type="button"
                          >
                            <div
                              class="sc-AxiKw dzBdqj"
                              height="1em"
                              width="1em"
                            >
                              <svg>
                                eye.svg
                              </svg>
                            </div>
                          </button>
                        </div>
                      </div>
                      <p
                        class="text-sm text-theme-danger"
                      >
                        Invalid Mnemonic
                      </p>
                    </fieldset>
                  </div>
                </div>
                <div
                  class="flex justify-end mt-10 space-x-3"
                >
                  <button
                    class="sc-AxjAm fPpool"
                    color="primary"
                    data-testid="SendVote__button--back"
                    type="button"
                  >
                    Back
                  </button>
                  <button
                    class="sc-AxjAm kbZyZT space-x-2"
                    color="primary"
                    data-testid="SendVote__button--submit"
                    disabled=""
                    type="submit"
                  >
                    <div
                      class="sc-AxiKw dklFyP"
                      height="20"
                      width="20"
                    >
                      <svg>
                        send.svg
                      </svg>
                    </div>
                    <span>
                      Send
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
